force-app/main/default/objects/Property__c/fields/Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>