force-app/main/default/objects/Property__c/fields/Acquisition_Equity__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Equity__c</fullName>
    <description>Bridge Use</description>
    <formula>Acquisition_Price__c - Max_Initial_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acquisition Price - Max Initial Loan Amount</inlineHelpText>
    <label>Acquisition Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>