force-app/main/default/objects/Property__c/fields/Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type__c</fullName>
    <description>Term Use</description>
    <label>Acquisition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build to Rent</fullName>
            </value>
            <value>
                <fullName>Bulk Sale</fullName>
            </value>
            <value>
                <fullName>Deed in Lieu</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Inherited</fullName>
            </value>
            <value>
                <fullName>Land Contract</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Off Market / Direct Sale</fullName>
            </value>
            <value>
                <fullName>Sheriff Sale/Auction</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>Tax Lien Foreclosure</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>