force-app/main/default/objects/Property__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Term Use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>