force-app/main/default/objects/Property__c/fields/Active_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Active_Last_Changed__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is the date that the Active checkbox was last changed</description>
    <inlineHelpText>This is the date that the Active checkbox was last changed</inlineHelpText>
    <label>Active Last Changed</label>
    <type>Date</type>
</CustomField>