force-app/main/default/objects/Property__c/fields/Actual_LTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_LTC__c</fullName>
    <description>Bridge Use
Actual Loan to Cost</description>
    <formula>Approved_Advance_Amount__c / Total_Cost_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual LTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>