force-app/main/default/objects/Property__c/fields/Actual_LTV__c.field-meta.xml
<CustomField>
    <fullName>Actual_LTV__c</fullName>
    <formula>Approved_Advance_Amount__c / Appraised_Value_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>