force-app/main/default/objects/Property__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>