force-app/main/default/objects/Property__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Advance__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>