force-app/main/default/objects/Property__c/fields/Advance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee__c</fullName>
    <description>Bridge Use</description>
    <formula>Deal__r.Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>