force-app/main/default/objects/Property__c/fields/Advance_Fee_formula__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_formula__c</fullName>
    <description>Bridge Use
Previous formula:
IF(ISNULL(Advance_Fee_Override__c), Advance_Fee__c * Approved_Advance_Amount__c, Advance_Fee_Override__c )</description>
    <formula>IF(ISNULL(Advance_Fee_Override__c), 
 Deal__r.Fee__c * Approved_Advance_Amount_Max__c ,
Advance_Fee_Override__c )</formula>
    <inlineHelpText>% of the max amount funded for this property</inlineHelpText>
    <label>Advance Fee $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>