force-app/main/default/objects/Property__c/fields/Advance_Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Override__c</fullName>
    <label>Advance Fee Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>