force-app/main/default/objects/Property__c/fields/Advance_Fee_text__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_text__c</fullName>
    <formula>TEXT(Advance_Fee__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Fee %</label>
    <type>Text</type>
</CustomField>