force-app/main/default/objects/Property__c/fields/Advance_String__c.field-meta.xml
<CustomField>
    <fullName>Advance_String__c</fullName>
    <description>Not Used</description>
    <label>Advance String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>