force-app/main/default/objects/Property__c/fields/After_Repair_Value__c.field-meta.xml
<CustomField>
    <fullName>After_Repair_Value__c</fullName>
    <description>Bridge Reno Use</description>
    <inlineHelpText>Most recent Appraised After Repair Value (ARV)</inlineHelpText>
    <label>Current Appraised After Repair Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>