force-app/main/default/objects/Property__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Property Age from the Appraisal</description>
    <label>Age</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>