force-app/main/default/objects/Property__c/fields/Age_After_Funding__c.field-meta.xml
<CustomField>
    <fullName>Age_After_Funding__c</fullName>
    <formula>IF(TODAY() - First_Funding_Date__c &lt; 30, &quot;&lt;30&quot;, IF(AND(TODAY() - First_Funding_Date__c &gt;= 30, TODAY() - First_Funding_Date__c &lt; 60), &quot;30+&quot;, IF(AND(TODAY() - First_Funding_Date__c &gt;= 60, TODAY() - First_Funding_Date__c &lt;90), &quot;60+&quot;, IF (TODAY() - First_Funding_Date__c &gt;= 90, &quot;90+&quot;,&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age After Funding</label>
    <type>Text</type>
</CustomField>