force-app/main/default/objects/Property__c/fields/Aggregate_Advance_Fee_PreAdvance__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Advance_Fee_PreAdvance__c</fullName>
    <formula>Deal__r.Aggregate_Advance_Fee_PreAdvance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Advance Fee PreAdvance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>