force-app/main/default/objects/Property__c/fields/Aggregate_Funding__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Funding__c</fullName>
    <formula>Deal__r.Aggregate_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total amount funded for the Loan that this Property belongs to</inlineHelpText>
    <label>Total Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>