force-app/main/default/objects/Property__c/fields/Aggregate_Payoff_Formula__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Payoff_Formula__c</fullName>
    <description>Bridge Use
Previous formula:
IF(!ISNULL(  Payoff_Received_Date__c  ), 
        Approved_Advance_Amount__c,
       Partial_Paydown__c)</description>
    <formula>IF(AND(
!ISNULL(  Payoff_Received_Date__c  ), 
 ISPICKVAL(Status__c, &apos;Paid off&apos;)),
         Approved_Advance_Amount_Used__c,
       Partial_Paydown__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Payoff Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>