force-app/main/default/objects/Property__c/fields/Aggregate_Payoffs__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Payoffs__c</fullName>
    <formula>Deal__r.Aggregate_Payoffs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total amount of Paid Off Properties for the Loan that this Property belongs to</inlineHelpText>
    <label>Total Payoffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>