force-app/main/default/objects/Property__c/fields/Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning__c</fullName>
    <label>Air Conditioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>