force-app/main/default/objects/Property__c/fields/ALTA_Loan_Policy_Amount__c.field-meta.xml
<CustomField>
    <fullName>ALTA_Loan_Policy_Amount__c</fullName>
    <label>ALTA Loan Policy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>