force-app/main/default/objects/Property__c/fields/Annual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance__c</fullName>
    <label>Annual Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>