force-app/main/default/objects/Property__c/fields/Annual_Landscaping_Expense__c.field-meta.xml
<CustomField>
    <fullName>Annual_Landscaping_Expense__c</fullName>
    <label>Landscaping Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>