force-app/main/default/objects/Property__c/fields/Annual_Managment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Managment_Fee__c</fullName>
    <label>Annual Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>