force-app/main/default/objects/Property__c/fields/Annual_NOI__c.field-meta.xml
<CustomField>
    <fullName>Annual_NOI__c</fullName>
    <description>Annual Net Operating Income.  Formula is the revenue generated by the properties minus the operating expenses.</description>
    <formula>Annual_Rent__c  -  Annual_Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Net Operating Income.  Formula is the revenue generated by the properties minus the operating expenses.</inlineHelpText>
    <label>Annual NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>