force-app/main/default/objects/Property__c/fields/Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rent__c</fullName>
    <formula>IF(ISBLANK( Verified_Rent__c ),
Verified_Rent__c * 12,
Monthly_Rent__c * 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>