force-app/main/default/objects/Property__c/fields/Appraisal_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Deposit_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Bridge Funding Team</description>
    <label>Appraisal Deposit Received</label>
    <type>Checkbox</type>
</CustomField>