force-app/main/default/objects/Property__c/fields/Appraisal_Sync__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Sync__c</fullName>
    <description>Indicates that an appraisal has been merged with this property</description>
    <formula>NOT(ISBLANK(Appraised_Value_Amount__c))</formula>
    <inlineHelpText>Indicates that an appraisal has been merged with this property</inlineHelpText>
    <label>Appraisal Received</label>
    <type>Checkbox</type>
</CustomField>