force-app/main/default/objects/Property__c/fields/Appraised_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value_Amount__c</fullName>
    <description>Most recent Appraised As Is Value</description>
    <inlineHelpText>Most recent Appraised As Is Value</inlineHelpText>
    <label>Current Appraised As-Is Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>