force-app/main/default/objects/Property__c/fields/Approved_Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount__c</fullName>
    <description>Bridge Use
Previous formula:
IF(Override_Advance_Amount__c = 0, 
        Initial_Disbursement_Remaining__c + Reno_Advance_Amount__c,
    Override_Advance_Amount__c
)</description>
    <formula>IF(OR(
 TEXT(Status__c) = &apos;Active&apos;,
 TEXT(Status__c) = &apos;Sold&apos;,
 TEXT(Status__c) = &apos;Paid Off&apos;),
  Approved_Advance_Amount_Used__c,
Initial_Disbursement_Remaining__c + Reno_Advance_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Status is &quot;Pending&quot; or &quot;In Process&quot;, then this will be the Approved Advance Amount for the next Advance.  If the Status is &quot;Active&quot;, then this will be the amount funded.</inlineHelpText>
    <label>Approved Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>