force-app/main/default/objects/Property__c/fields/Approved_Advance_Amount_Max__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Max__c</fullName>
    <description>Bridge Use
Previous formula:
IF(Override_Advance_Amount__c = 0, 
        Initial_Disbursement__c + Reno_Advance_Amount__c,
    Override_Advance_Amount__c
)</description>
    <formula>Initial_Disbursement__c + Approved_Renovation_Holdback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max that can be funded for the Initial Disbursement and the Renovation Advances</inlineHelpText>
    <label>Approved Advance Amount Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>