force-app/main/default/objects/Property__c/fields/Approved_Advance_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Remaining__c</fullName>
    <formula>Approved_Advance_Amount_Max__c - Approved_Advance_Amount_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between the Approved Advance Amount Max and the Approved Advance Amount Funded</inlineHelpText>
    <label>Approved Advance Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>