force-app/main/default/objects/Property__c/fields/Approved_Advance_Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Used__c</fullName>
    <inlineHelpText>The total that has been funded on Completed Advances</inlineHelpText>
    <label>Approved Advance Amount Funded</label>
    <summarizedField>Property_Advance__c.Approved_Advance_Amount_Calc__c</summarizedField>
    <summaryFilterItems>
        <field>Property_Advance__c.Advance_Status_text__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_Advance__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>