force-app/main/default/objects/Property__c/fields/Approved_Completed_Rehab_Costs__c.field-meta.xml
<CustomField>
    <fullName>Approved_Completed_Rehab_Costs__c</fullName>
    <label>Approved Completed Rehab Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>