force-app/main/default/objects/Property__c/fields/Approved_Renovation_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Approved_Renovation_Holdback__c</fullName>
    <description>Bridge Reno Use</description>
    <formula>IF(ISBLANK(Override_Reno_Advance_Amount__c),
 Max_Reno_Cost_Reimbursement__c,
 Override_Reno_Advance_Amount__c
)</formula>
    <inlineHelpText>Lesser of Max Reno Cost Reimbursement, Reno Limit, Max Total Loan Amt Less Max Initial Amt, &amp; Reno Budget</inlineHelpText>
    <label>Approved Renovation Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>