force-app/main/default/objects/Property__c/fields/Are_Payments_Current__c.field-meta.xml
<CustomField>
    <fullName>Are_Payments_Current__c</fullName>
    <description>Term Use</description>
    <label>Are Payments Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>