force-app/main/default/objects/Property__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Asset ID</label>
    <type>AutoNumber</type>
</CustomField>