force-app/main/default/objects/Property__c/fields/Asset_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Comments__c</fullName>
    <label>Asset Management Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>