force-app/main/default/objects/Property__c/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Servicer Asset Manager</label>
    <length>75</length>
    <type>Text</type>
</CustomField>