force-app/main/default/objects/Property__c/fields/Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maturity_Date__c</fullName>
    <description>Sooner of the Line Maturity Date or the calculation of First Funding Date + Number of Days &quot;Asset Maturity Days&quot; field on the Deal</description>
    <formula>IF(
 ISBLANK(Asset_Maturity_Date_Override__c), 

  IF( ISPICKVAL( Deal__r.Asset_Maturity__c , &quot;N/A&quot;),
   Deal__r.Current_Line_Maturity_Date__c,
   IF(
    (VALUE(Left(TEXT(Deal__r.Asset_Maturity__c),3)) + First_Funding_Date__c) &lt; Deal__r.Current_Line_Maturity_Date__c ,
    VALUE(Left(TEXT(Deal__r.Asset_Maturity__c),3)) + First_Funding_Date__c, 
    Deal__r.Current_Line_Maturity_Date__c)
   ),

 Asset_Maturity_Date_Override__c
)</formula>
    <inlineHelpText>Sooner of the Line Maturity Date or the calculation of First Funding Date + Number of Days &quot;Asset Maturity Days&quot; field on the Deal</inlineHelpText>
    <label>Original Asset Maturity Date</label>
    <type>Date</type>
</CustomField>