force-app/main/default/objects/Property__c/fields/Asset_Maturity_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maturity_Date_Override__c</fullName>
    <label>Asset Maturity Date Override</label>
    <type>Date</type>
</CustomField>