force-app/main/default/objects/Property__c/fields/Assign_Fee_to_Purchase_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Assign_Fee_to_Purchase_Ratio__c</fullName>
    <formula>Assignment_Fee__c / Acquisition_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assign Fee to Purchase Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>