force-app/main/default/objects/Property__c/fields/Assumed_3rd_Party_Value__c.field-meta.xml
<CustomField>
    <fullName>Assumed_3rd_Party_Value__c</fullName>
    <description>If the Appraised Value is blank, then this is the Borrower Opinion of Value</description>
    <formula>IF(
 Appraised_Value_Amount__c  &gt; 0,
  Appraised_Value_Amount__c,
  Borrower_Opinion_of_Current_Value__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Appraised Value is blank, then this is the Borrower Opinion of Value</inlineHelpText>
    <label>Assumed 3rd Party Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>