force-app/main/default/objects/Property__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>SemiDetached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>