force-app/main/default/objects/Property__c/fields/AVM_Last_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>AVM_Last_Sale_Date__c</fullName>
    <description>Last Sale Date from the Automated Valuation Model (AVM) Provider</description>
    <inlineHelpText>Last Sale Date from the Automated Valuation Model (AVM) Provider</inlineHelpText>
    <label>AVM Last Sale Date</label>
    <type>Date</type>
</CustomField>