force-app/main/default/objects/Property__c/fields/AVM_Last_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>AVM_Last_Sale_Price__c</fullName>
    <description>Last Sale Price from the Automated Valuation Model (AVM) Provider</description>
    <inlineHelpText>Last Sale Price from the Automated Valuation Model (AVM) Provider</inlineHelpText>
    <label>AVM Last Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>