force-app/main/default/objects/Property__c/fields/BlackSquare_Fee__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee__c</fullName>
    <defaultValue>IF($RecordType.Name == &apos;Renovation&apos;, 725.00, 0 )</defaultValue>
    <inlineHelpText>Previously Blacksquare Fee</inlineHelpText>
    <label>Onboarding Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>