force-app/main/default/objects/Property__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <length>15</length>
    <type>Text</type>
</CustomField>