force-app/main/default/objects/Property__c/fields/Borrower_Comments__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Comments__c</fullName>
    <label>Borrower Comments</label>
    <type>TextArea</type>
</CustomField>