force-app/main/default/objects/Property__c/fields/Borrower_Equity__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Equity__c</fullName>
    <description>Bridge Use</description>
    <formula>Acquisition_Equity__c + Renovation_Equity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acquisition Equity + Renovation Equity</inlineHelpText>
    <label>Borrower Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>