force-app/main/default/objects/Property__c/fields/Borrower_Opinion_of_ARV__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Opinion_of_ARV__c</fullName>
    <description>The Borrower Opinion of the After Repair Value</description>
    <inlineHelpText>The Borrower Opinion of the After Repair Value</inlineHelpText>
    <label>Borrower Opinion of ARV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>