force-app/main/default/objects/Property__c/fields/BPO_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Date__c</fullName>
    <description>Date of the most recent Appraisal</description>
    <inlineHelpText>Date of the most recent Appraisal</inlineHelpText>
    <label>Current Appraisal Date</label>
    <type>Date</type>
</CustomField>