force-app/main/default/objects/Property__c/fields/BPO_Appraisal_Firm__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Firm__c</fullName>
    <description>Firm of the most recent Appraisal</description>
    <inlineHelpText>Firm of the most recent Appraisal</inlineHelpText>
    <label>Current Appraisal Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>