force-app/main/default/objects/Property__c/fields/BPO_Appraisal_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Order_Date__c</fullName>
    <label>Appraisal Order Date</label>
    <type>Date</type>
</CustomField>