force-app/main/default/objects/Property__c/fields/BPO_Appraisal_Value__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Value__c</fullName>
    <label>As Is Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>