force-app/main/default/objects/Property__c/fields/Broker_Adv_Fee_Amnt__c.field-meta.xml
<CustomField>
    <fullName>Broker_Adv_Fee_Amnt__c</fullName>
    <description>Bridge Use

Previously:
IF( Deal__r.Record_Type_Name__c  = &quot;Single_Asset_Bridge_Loan&quot;,
Broker_Advance_Fee_Perc__c *  Approved_Advance_Amount_Max__c,
Broker_Advance_Fee_Perc__c * Approved_Advance_Amount__c)</description>
    <formula>IF(  ISPICKVAL( Deal__r.Broker_Fee_Paid_When__c , &apos;Each Initial Advance&apos; ),
 Deal__r.Broker_Fees__c  * Approved_Advance_Amount_Max__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% of the max amount funded for this property</inlineHelpText>
    <label>Broker Fee $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>